# logcabin

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CLANG.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README  README.md  README.rst  RELEASE-PROCESS.md  RELEASES.md  RefTest.cc  SConstruct  TestRunner.cc  cpplint.py  sample.conf
AutoJoin/: CMakeLists.txt  Readme.md  UnitTests.cpp  a.out  autojoin.cpp  autojoin.h  main.cpp  manage.cpp  target  temp.cpp  test.cpp  test.sh
AutoJoin/Identicon/: identicon.cpp  identicon.h  test.cpp
AutoJoin/zeroconf/: .gitignore  avahipublish.out  browse-services.c  browseservices2  client-browse-services.c  client-publish-service.c
Client/: Backoff.cc  BackoffTest.cc  Client.cc  Client.h  ClientImpl.cc  ClientImpl.h  ClientImplBase.cc  ClientImplBase.h  ClientImplTest.cc  ClientTest.cc  LeaderRPC.cc  LeaderRPC.h  LeaderRPCMock.cc  LeaderRPCMock.h  LeaderRPCTest.cc  MockClientImpl.cc  MockClientImpl.h  MockClientImplTest.cc  SConscript  ServerControl.cc  SessionManager.cc  SessionManager.h  SessionManagerTest.cc  Util.cc  UtilTest.cc
Core/: Buffer.cc  Buffer.h  BufferTest.cc  Checksum.cc  Checksum.h  CompatAtomic.h  CompatHash.h  ConditionVariable.cc  ConditionVariable.h  ConditionVariableTest.cc  Config.cc  Config.h  ConfigTest.cc  Debug.cc  Debug.h  DebugTest.cc  Endian.h  Mutex.h  ProtoBuf.cc  ProtoBuf.h  ProtoBufTest.cc  ProtoBufTest.proto  RWPtr.h  RWPtrTest.cc  Random.cc  Random.h  RandomTest.cc  SConscript  StringUtil.cc  StringUtil.h  StringUtilTest.cc  ThreadId.cc  ThreadId.h  ThreadIdTest.cc  Time.cc  Time.h  TimeTest.cc  Util.cc  Util.h  UtilTest.cc
Event/: File.cc  File.h  FileTest.cc  Internal.cc  Internal.h  InternalTest.cc  Loop.cc  Loop.h  LoopTest.cc  SConscript  Signal.cc  Signal.h  SignalTest.cc  Timer.cc  Timer.h  TimerTest.cc
Examples/: Benchmark.cc  DumpTree.cc  FailoverTest.cc  HelloWorld.cc  Reconfigure.cc  ReconfigureTest.cc  SConscript  ServerStats.cc  SmokeTest.cc  TreeOps.cc  Util.cc  Util.h  UtilTest.cc
Protocol/: Client.cc  Client.h  Client.proto  Common.h  LogCabin.proto  Raft.proto  SConscript  ServerControl.proto  ServerStats.proto
RPC/: Address.cc  Address.h  AddressTest.cc  Buffer.cc  Buffer.h  BufferTest.cc  ClientRPC.cc  ClientRPC.h  ClientRPCTest.cc  ClientServerTest.cc  ClientSession.cc  ClientSession.h  ClientSessionTest.cc  MessageSocket.cc  MessageSocket.h  MessageSocketTest.cc  OpaqueClientRPC.cc  OpaqueClientRPC.h  OpaqueClientRPCTest.cc  OpaqueServer.cc  OpaqueServer.h  OpaqueServerRPC.cc  OpaqueServerRPC.h  OpaqueServerTest.cc  ProtoBuf.cc  ProtoBuf.h  ProtoBufTest.cc  Protocol.cc  SConscript  Server.cc  Server.h  ServerRPC.cc  ServerRPC.h  ServerRPCTest.cc  ServerTest.cc  Service.h  ServiceMock.cc  ServiceMock.h  TCPListener.cc  TCPListener.h  (+4 more)
Server/: ClientService.cc  ClientService.h  ClientServiceTest.cc  Consensus.cc  Consensus.h  ControlService.cc  ControlService.h  Globals.cc  Globals.h  GlobalsTest.cc  InternalLog.proto  LogManager.cc  LogManager.h  LogManagerTest.cc  Main.cc  MemoryLog.cc  MemoryLog.h  MemoryLogTest.cc  RaftConsensus.cc  RaftConsensus.h  RaftConsensusInvariants.cc  RaftConsensusTest.cc  RaftLog.cc  RaftLog.h  RaftLogMetadata.proto  RaftLogTest.cc  RaftService.cc  RaftService.h  SConscript  ServerStats.cc  ServerStats.h  ServerStatsTest.cc  Sessions.proto  SimpleFileLog.cc  SimpleFileLog.h  SimpleFileLog.proto  SnapshotFile.cc  SnapshotFile.h  SnapshotFileTest.cc  SnapshotMetadata.proto  (+4 more)
Storage/: Factory.cc  Factory.h  FactoryTest.cc  FilesystemModule.cc  FilesystemModule.h  FilesystemModuleTest.cc  FilesystemUtil.cc  FilesystemUtil.h  FilesystemUtilTest.cc  Layout.cc  Layout.h  Log.cc  Log.h  LogEntry.cc  LogEntry.h  LogEntryTest.cc  LogFactory.cc  LogFactory.h  LogFactoryTest.cc  MemoryLog.cc  MemoryLog.h  MemoryLogTest.cc  MemoryModule.cc  MemoryModule.h  MemoryModuleTest.cc  Module.h  SConscript  SegmentedLog.cc  SegmentedLog.h  SegmentedLog.proto  SegmentedLogTest.cc  SimpleFileLog.cc  SimpleFileLog.h  SnapshotFile.cc  SnapshotFile.h  SnapshotFileTest.cc  Tool.cc  Types.h
Tree/: ProtoBuf.cc  SConscript  Tree.cc  Tree.h  TreeTest.cc
dlogd/: AsyncMutex.cc  AsyncMutex.h  DLogService.h  Debug.c  Debug.h  Host.h  InternalLog.proto  LogManager.cc  LogManager.h  ReplicationService.h  SConscript  SConstruct  main.cc  main.cpp
dlogperf/: SConscript  main.cc
docs/: Doxyfile
hooks/: pre-commit  pre-commit-10build  pre-commit-20test  pre-commit-40mocksmoke  pre-commit-40smoke  pre-commit-50clustersmoke  pre-commit-80check  pre-commit-90docs
include/: Callback.h  Checksum.h  Common.h  Config.h  DLogClient.h  DLogEchoService.h  DLogEvent.h  DLogRPC.h  DLogStorage.h  Debug.h  ProtoBuf.h  Ref.h  WorkDispatcher.h
include/LogCabin/: Client.h  Debug.h  Util.h
libDLogClient/: ClientImpl.cc  ClientImpl.h  DLogClient.cc  SConscript  SConstruct
libDLogRPC/: Checksum.cc  Common.cc  Config.cc  DLogEchoService.cc  DLogEvent.cc  DLogEventInt.h  DLogEventLE2.cc  DLogEventLE2.h  DLogRPC.cc  DLogRPCInt.h  Debug.c  ProtoBuf.cc  SConscript  SConstruct
libDLogStorage/: DLogStorage.cc  DumbFilesystem.proto  DumbFilesystemStorageModule.cc  DumbFilesystemStorageModule.h  Factory.cc  FilesystemStorageModule.cc  FilesystemStorageModule.h  FilesystemUtil.cc  FilesystemUtil.h  MemoryStorageModule.cc  MemoryStorageModule.h  SConscript  WorkDispatcher.cc
logo/: README.md
proto/: Client.cc  Client.h  SConscript  dlog.proto
scripts/: common.py  config.py  cpplint.py  electionperf.py  failovertest.py  initlog.py  logcabin  logcabin-init-redhat  logcabinctltest.sh  readme.sh  serverstats.py  smoketest.py
site_scons/site_tools/: protoc.py
test/: SConscript  TestRunner.cc
test/dlogd/: AsyncMutex.cc  LogManager.cc
test/include/: CommonTest.cc  RefTest.cc
test/libDLogClient/: DLogClient.cc
test/libDLogRPC/: Checksum.cc  Config.cc  EventSignal.cc  EventTimer.cc  ProtoBuf.cc  ProtoBuf.proto
test/libDLogStorage/: DLogStorage.cc  DumbFilesystemStorageModule.cc  FilesystemStorageModule.cc  FilesystemUtil.cc  MemoryStorageModule.cc  WorkDispatcher.cc
